syntax = "proto3";

package api.v1;

import "google/api/annotations.proto";

message PutRequest {
  string name = 1;
  string value = 2;
}

message PutResponse {}

message GetRequest {
  string name = 1;
}

message GetResponse {
  string name = 1;
  string value = 2;
}

service KvService {
  rpc Put(PutRequest) returns (PutResponse) {
    option (google.api.http) = {
      post: "/kv/v1/{name}"
    };
  }

  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/kv/v1/{name}"
    };
  }
}
